Se realizó la base de barra de escritorio, fondo e íconos

--- a/index.html
+++ b/index.html
@@ -24,5 +24,29 @@
     <!--INTERACCION DEL SISTEMA-->
     <script src="js/main.js"></script>
 
+    <!--CREACIÓN DE VENTANA -->
+    <div class="escritorio">
+        <div class="escritorio_barra">
+            <h2 class="escritorio_barra_titulo">ypantonio</h2>
+           <div class="escritorio_barra_control">
+                <img src="img/disminuir .png" alt="" class="boton">
+                <img src="img/aumentar .png" alt="" class="boton">
+                <img src="img/cerrar.png" alt="" class="boton">
+            </div>
+        </div>
+    </div>
+    <!--BARRA DE TAREAS-->
+    <div class="escritorio_barra_menu">
+            <div class="escritorio_barra_menú_control">
+                <img src="img/inicio.png" alt="" class="inicio">
+                <img src="img/chrome.png" alt="" class="navegador">
+                <img src="img/edge.png" alt="" class="navegador">
+                <img src="img/12.png" alt="" class="hora">
+            </div>
+    </div>
+    <!--CREACIÓN DE CARPETA -->
+        <div class="archivo">
+            <img src="img/carpeta.png" alt="" class="carpeta">
+        </div>
 </body>
 </html>
