--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="js/main.js"></script>
 
     <!--CREACIÓN DE VENTANA -->
-    <div class="escritorio">
+   <!-- <div class="escritorio">
         <div class="escritorio_barra">
             <h2 class="escritorio_barra_titulo">ypantonio</h2>
            <div class="escritorio_barra_control">
@@ -35,6 +35,7 @@
             </div>
         </div>
     </div>
+    -->
     <!--BARRA DE TAREAS-->
     <div class="escritorio_barra_menu">
             <div class="escritorio_barra_menú_control">
