--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <div class="escritorio_barra_menu">
             <div class="escritorio_barra_menú_control">
                 <img src="img/inicio.png" alt="" class="inicio">
+                <img src="img/carpeta.png" alt="" class="carpet">
                 <img src="img/chrome.png" alt="" class="navegador">
                 <img src="img/edge.png" alt="" class="navegador">
                 <img src="img/12.png" alt="" class="hora">
