--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <div class="escritorio_barra_menu activo" id="menu">
             <div class="escritorio_barra_menú_control">
                 <img src="img/inicio.png" alt="" class="inicio" id="inicio" onclick="activar();">
-                <img src="/img/carpetaw.png" class="carpeta" alt="">
-                <img src="/img/icon_oneote.png" class="navegador" alt="">
-                <img src="/img/excel.png" class="navegador" alt="">
-                <img src="/img/powr.png" class="navegador" alt="">
-                <img src="/img/block de notas.png" alt="" class="block" id="block" onclick="activacion();">
+                <img src="img/carpetaw.png" class="carpeta" alt="">
+                <img src="img/icon_oneote.png" class="navegador" alt="">
+                <img src="img/excel.png" class="navegador" alt="">
+                <img src="img/powr.png" class="navegador" alt="">
+                <img src="img/block de notas.png" alt="" class="block" id="block" onclick="activacion();">
             </div>
 
              <!--TIEMPO-->
@@ -68,28 +68,28 @@
         <div class="inicio_menu" id="menu2">
          
             <div class="visuals"> 
-                <img src="/img/visual.png" alt="" class="visual"> <p>Visual Studio</p>
+                <img src="img/visual.png" alt="" class="visual"> <p>Visual Studio</p>
             </div>
             <div class="visuals"> 
-                <img src="/img/ubunto.png" alt="" class="visual"> <p>Ubunto</p>
+                <img src="img/ubunto.png" alt="" class="visual"> <p>Ubunto</p>
             </div>
             <div class="visuals"> 
-                <img src="/img/edge.png" alt="" class="visual"> <p>Microsoft Edge</p>
+                <img src="img/edge.png" alt="" class="visual"> <p>Microsoft Edge</p>
             </div>
             <div class="visuals"> 
-                <img src="/img/block de notas.png" alt="" class="visual"> <p>Block de notas</p>
+                <img src="img/block de notas.png" alt="" class="visual"> <p>Block de notas</p>
             </div>
             <div class="visuals">
-                <img src="/img/access.png" alt="" class="visual"> <p>Access</p>
+                <img src="img/access.png" alt="" class="visual"> <p>Access</p>
             </div>
             <div class="visuals">
-                <img src="/img/chrome.png" alt="" class="visual"> <p>Chrome</p>
+                <img src="img/chrome.png" alt="" class="visual"> <p>Chrome</p>
             </div>
             <div class="visuals">
-                <img src="/img/word.png" alt="" class="visual"> <p>Microsoft Word</p>
+                <img src="img/word.png" alt="" class="visual"> <p>Microsoft Word</p>
             </div>
             <div class="visuals">
-                <img src="/img/publisher.png" alt="" class="visual"> <p>Publisher</p>
+                <img src="img/publisher.png" alt="" class="visual"> <p>Publisher</p>
             </div>
         </div>
        
